--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -361,6 +361,7 @@ singleuser:
   lifecycleHooks: {}
   initContainers: []
   extraContainers: []
+  allowPrivilegeEscalation: false
   uid: 1000
   fsGid: 100
   serviceAccountName:
