--- a/jupyterhub/templates/scheduling/user-scheduler/deployment.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/deployment.yaml
@@ -83,9 +83,11 @@ spec:
           resources:
             {{- . | toYaml | nindent 12 }}
           {{- end }}
+          {{- if .Values.securityContext.enabled }}
           {{- with .Values.scheduling.userScheduler.containerSecurityContext }}
           securityContext:
             {{- . | toYaml | nindent 12 }}
+          {{- end }}
           {{- end }}
       {{- with .Values.scheduling.userScheduler.extraPodSpec }}
       {{- . | toYaml | nindent 6 }}
