fix: k8s 1.20 doesn't have PDBs in v1 yet

--- a/jupyterhub/templates/proxy/pdb.yaml
+++ b/jupyterhub/templates/proxy/pdb.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.proxy.chp.pdb.enabled -}}
-{{- if .Capabilities.APIVersions.Has "policy/v1" -}}
+{{- if .Capabilities.APIVersions.Has "policy/v1/PodDisruptionBudget" -}}
 {{- /* k8s 1.21+ required */ -}}
 apiVersion: policy/v1
 {{- else }}
