--- a/.github/workflows/test-chart.yaml
+++ b/.github/workflows/test-chart.yaml
@@ -43,41 +43,41 @@ jobs:
         # k3s-channel: https://update.k3s.io/v1-release/channels
         #
         include:
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.24.3-rc1+k3s1
+          - k3s-version: v1.24.3+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.23.9-rc1+k3s1
+          - k3s-version: v1.23.9+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
-          - k3s-version: v1.22.12-rc1+k3s1
+          - k3s-version: v1.22.12+k3s1
             extra-setup-args: --debug
 
     steps:
@@ -147,6 +147,10 @@ jobs:
           helm upgrade --install jupyterhub ./jupyterhub \
               --values dev-config.yaml \
               --values dev-config-local-chart-extra-config.yaml \
+              --set hub.networkPolicy.enabled=false \
+              --set proxy.chp.networkPolicy.enabled=false \
+              --set proxy.traefik.networkPolicy.enabled=false \
+              --set singleuser.networkPolicy.enabled=false \
               ${{ matrix.local-chart-extra-args }}
 
       - name: "Await local chart"
