--- a/jupyterhub/templates/proxy/autohttps/deployment.yaml
+++ b/jupyterhub/templates/proxy/autohttps/deployment.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 spec:
-  {{- if not (eq nil .Values.proxy.revisionHistoryLimit) }}
-  revisionHistoryLimit: {{ .Values.proxy.revisionHistoryLimit }}
+  {{- if not (eq nil .Values.proxy.traefik.revisionHistoryLimit) }}
+  revisionHistoryLimit: {{ .Values.proxy.traefik.revisionHistoryLimit }}
   {{- end }}
   replicas: 1
   selector:
