--- a/.github/workflows/watch-dependencies.yaml
+++ b/.github/workflows/watch-dependencies.yaml
@@ -141,6 +141,9 @@ jobs:
         with:
           python-version: "3.9"
 
+      - name: Install Python dependencies
+        run: pip install requests
+
       - name: Get images/hub/requirements.in pinned version of jupyterhub
         id: local
         run: |
@@ -149,12 +152,16 @@ jobs:
 
       - name: Get latest version of jupyterhub
         id: latest
+        shell: python
         run: |
-          latest_version=$(
-              curl -s https://pypi.org/pypi/jupyterhub/json \
-            | jq -r .info.version
-          )
-          echo "::set-output name=version::$latest_version"
+          import requests
+
+          request = requests.get("https://pypi.org/pypi/jupyterhub/json")
+          data = request.json()
+          releases = data["releases"]
+          latest_version = list(releases.keys())[-1]
+
+          print(f"::set-output name=version::{latest_version}")
 
       - name: Update pinned version of jupyterhub
         if: steps.local.outputs.version != steps.latest.outputs.version
