--- a/.github/workflows/watch-dependencies.yaml
+++ b/.github/workflows/watch-dependencies.yaml
@@ -170,6 +170,22 @@ jobs:
           sed --in-place 's/jupyterhub==${{ steps.local.outputs.version }}/jupyterhub==${{ steps.latest.outputs.version }}/g' images/singleuser-sample/requirements.txt
           sed --in-place 's/appVersion: "${{ steps.local.outputs.version }}"/appVersion: "${{ steps.latest.outputs.version }}"/g' jupyterhub/Chart.yaml
 
+      - name: Refreeze images/hub/requirements.txt based on images/hub/requirements.in
+        if: steps.local.outputs.version != steps.latest.outputs.version
+        # IMPORTANT: This run segment is duplicated in this workflow file across
+        #            two separate jobs, any update here should be made in the
+        #            other job as well.
+        #
+        run: |
+          cd images/hub
+          docker run --rm \
+              --env=CUSTOM_COMPILE_COMMAND='Use the "Run workflow" button at https://github.com/jupyterhub/zero-to-jupyterhub-k8s/actions/workflows/watch-dependencies.yaml' \
+              --volume=$PWD:/io \
+              --workdir=/io \
+              --user=root \
+              python:3.9-bullseye \
+              sh -c 'pip install pip-tools==6.* && pip-compile --upgrade'
+
       - name: git diff
         if: steps.local.outputs.version != steps.latest.outputs.version
         run: git --no-pager diff --color=always
@@ -210,6 +226,10 @@ jobs:
         # Note that as of 2022-05-29, `pip-compile` has issues with `pycurl`,
         # but we workaround them by by omitting the `-slim` part from the image
         # in the command below.
+        #
+        # IMPORTANT: This run segment is duplicated in this workflow file across
+        #            two separate jobs, any update here should be made in the
+        #            other job as well.
         #
         run: |
           cd images/hub
