ci: add comment next to version pinning to guide updates

--- a/images/hub/requirements.in
+++ b/images/hub/requirements.in
@@ -5,7 +5,8 @@
 # that will also update the jupyterhub version if needed.
 # README.md file.
 
-# JupyterHub itself
+# JupyterHub itself, update this version pinning by running the workflow
+# mentioned above.
 jupyterhub==3.0.0b1
 
 ## Authenticators
